fixed some homepage margins on mobile

--- a/styles/sass/pages/_home.sass
+++ b/styles/sass/pages/_home.sass
@@ -4,7 +4,7 @@
   width: 100%
   height: 100%
   & .articles
-    margin-bottom: 20px
+    margin-bottom: 50px
 
 .homepage-bottom
   width: 100%
@@ -12,7 +12,7 @@
   flex-direction: column
   & .articles
     +respond-to(medium)
-      margin-bottom: 10px
+      margin-bottom: 20px
 
 .featured-story-area
   display: flex
@@ -24,6 +24,7 @@
       display: none
   +respond-to(medium)
     height: 500px
+    margin-bottom: 0px
 
 .ad-row
   display: flex
